# zydis

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yaml
cmake/: Config.cmake.in  wdk7.cmake
cmake/toolchains/: wdk7-rules.cmake  wdk7.cmake
include/Zycore/: LibC.h  Types.h
include/Zydis/Internal/: FormatterATT.h  FormatterBase.h  FormatterIntel.h  SharedData.h
src/: Decoder.c  DecoderData.c  Encoder.c  Formatter.c  FormatterATT.c  FormatterBase.c  FormatterIntel.c  Register.c
src/Zycore/: ArgParse.c  String.c  Vector.c
tests/wdk7-smoke/: CMakeLists.txt  smoke_driver.c
